# zotero-to-obsidian

./: Cargo.toml  README.md
.library/: library.json
Academic Papers/: Esau1962EVALUATIONSTUDIESULTRASTRUCTURE.md  Jackson2016WageringDivineHiddenness.md
Articles/: JenGunterWhat.md  OpeningDavidKrakauera.md  SamHarris.md  Suzuki2021ZhongVsNei.md  ValProgrammingDatomic.md
Books/: MARLETTO2021SCIENCECANCAN.md
Resource/: AcademicPaper.md  Article.md  Book.md  New universal note (delete me).md  TED Talk.md  TEDTalk.md  YouTube Video.md
Resource/AcademicPapers/: Jackson2019SalvagingPascalWager
Resource/Articles/: 2017CellsEggplantMetarationality  MyEthicalBeliefs  OpeningDavidKrakauer  PhysicsAnimationsFilm  SpeedScience  UpdatesEasyRust  Willems2020WorldGettingBetter
Resource/Books/: Ahrens2017HowTakeSmart
Resource/YoutubeVideos/: BillEvansArchiveUniversalMindBill
Resources/Academic Papers/: Jackson2021BeliefFaithHope.md  Jackson2021BeliefFaithHopea.md
Resources/Articles/: 2020MetarationalityIntroductionMetarationality.md  2021ZoteroZotfileMdnotes.md  COMPLEXITYLecture02.md  EmotionalDogIts.md
Resources/Books/: Deutsch1997FabricRealityScience.md  Deutsch2011BeginningInfinityExplanations.md  Santideva2003WayBodhisattvaTranslation.md
Templates/: AcademicPaper.md  Article.md  Person.md  Quote.md  YoutubeVideo.md
Youtube Videos/: BBCEarthMotherTigerLearns.md  Nihongomanabu2014PoemJapaneseVoice.md  mMarukudeibuPlaylistsJapaneseIndieRock.md
src/: @rust_panic  datatypes.rs  json_parser.rs  main.rs  resource_types.rs
(+1 files in other folders)
