[package]
name = "zotero-to-obsidian"
version = "0.1.0"
authors = ["sashin <myself@sashinexists.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_json ="1"
serde_derive = "1"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
regex = "1"
